# coolantai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
api/: __init__.py  main.py  pipeline.py  runner.py
data/: example_spec.json
data/extracted/: _skipped.json  shell-s5x-datasheet.json  totalenergies-biolife4-sds.json
data/sources/: pfas-2026-regulatory-guide.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: LiveLog.tsx  LoopCounter.tsx  Panel.tsx  PipelineDiagram.tsx  PipelineNode.tsx  ProfileForm.tsx  ResultsPanel.tsx  SourceChips.tsx
frontend/src/hooks/: useLiveRun.ts  useMockRun.ts  useRun.ts
frontend/src/lib/: api.ts  mockRun.ts  pipeline.ts  profile.ts  types.ts
scripts/: ingest.py
src/coolant_copilot/: extraction.py  graph.py  ingestion.py  injection_audit.py  observability.py  prompting.py  report.py  state.py  streaming.py
src/coolant_copilot/nodes/: compliance_checker.py  critic.py  experiment_planner.py  generator.py  property_estimator.py  research.py  (+1 more)
tests/: conftest.py  test_api.py  test_compliance_checker.py  test_critic.py  test_datacenter_profile.py  test_experiment_planner.py  test_extraction.py  test_generator.py  test_graph.py  test_ingestion.py  test_injection_audit.py  test_observability.py  test_prompting.py  test_property_estimator.py  test_report.py  test_research.py  test_state.py  test_tools_compliance.py  test_tools_properties.py  test_tools_reference.py
(+5 files in other folders)
