[project]
name = "coolant-copilot"
version = "0.1.0"
description = "Multi-agent copilot for PFAS-free data center coolant formulation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-chroma>=0.2",
    "langchain-text-splitters>=0.3",
    "tiktoken>=0.7",
    "pypdf>=5.0",
    "python-dotenv>=1.0",
    # api/ service wrapping the pipeline (run with `uvicorn api.main:app`)
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
